Javascript and CSS to add modal box

--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -1,143 +1,165 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700');
+@import
+	url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700')
+	;
 
 * {
-  font-family: 'Raleway', sans-serif;
-  max-width: auto;
-  padding: 0;
-  margin: 0;
-  background-color: #ebf5fa;
+	font-family: 'Raleway', sans-serif;
+	max-width: auto;
+	padding: 0;
+	margin: 0;
+	background-color: #ebf5fa;
 }
 
 .container {
-  max-width: auto;
-  text-align: center;
+	max-width: auto;
+	text-align: center;
 }
 
 section:hover {
-  transform: scale(1.02);
-  box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
+	transform: scale(1.02);
+	box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
 }
 
 section li {
-  list-style: none;
-  visibility: hidden;
+	list-style: none;
+	visibility: hidden;
 }
 
 nav {
-  display: flex;
-  justify-content: space-between;
-  text-align: right;
-  background-image: linear-gradient(to right,
-    #0f87c3,
-    #068bcd,
-    #49b9f2,
-    #49b9f2,
-    lightblue);
+	display: flex;
+	justify-content: space-between;
+	text-align: right;
+	background-image: linear-gradient(to right, #0f87c3, #068bcd, #49b9f2, #49b9f2, lightblue);
 }
 
 .logo {
-  display: flex;
-  text-align: left;
-  height: 3em;
-  justify-content: center;
-  background: transparent;
+	display: flex;
+	text-align: left;
+	height: 3em;
+	justify-content: center;
+	background: transparent;
 }
 
 nav a {
-  display: flex;
-  padding: 0.5em;
-  text-align: right;
-  text-decoration: none;
-  color: #04496b;
-  background: transparent;
+	display: flex;
+	padding: 0.5em;
+	text-align: right;
+	text-decoration: none;
+	color: #04496b;
+	background: transparent;
 }
 
 nav a:visited {
-  color: #04496b;
-  background: transparent;
+	color: #04496b;
+	background: transparent;
 }
 
 nav a:hover {
-  opacity: 0.6;
-  background: transparent;
+	opacity: 0.6;
+	background: transparent;
 }
 
 nav h2 {
-  background: transparent;
+	background: transparent;
 }
 
 .dashboard {
-  height: 100%;
-  grid-gap: 5%;
-  padding: 5%;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+	height: 100%;
+	grid-gap: 5%;
+	padding: 5%;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: repeat(3, 1fr);
 }
 
 section {
-  display: flex;
-  flex-direction: column;
-  height: 10em;
-  padding: 1em 1em;
-  background-image: linear-gradient(#0f87c3, #068bcd 0%, #49b9f2 100%);
-  border-radius: 15px;
-  box-shadow: 0 10px 20px rgba(169, 201, 255, .4);
-  transition: 0.3s ease-in-out;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	height: 10em;
+	padding: 1em 1em;
+	background-image: linear-gradient(#0f87c3, #068bcd 0%, #49b9f2 100%);
+	border-radius: 15px;
+	box-shadow: 0 10px 20px rgba(169, 201, 255, .4);
+	transition: 0.3s ease-in-out;
+	align-items: center;
+	justify-content: center;
 }
 
 section .emotionIndicator {
-  visibility: hidden;
-  background: transparent;
+	visibility: hidden;
+	background: transparent;
 }
 
 section h2 {
-  visibility: visible;
-  background: transparent;
-  color: #04496b;
-  padding: 2%;
+	visibility: visible;
+	background: transparent;
+	color: #04496b;
+	padding: 2%;
 }
 
 section a {
-  visibility: visible;
-  background: transparent;
-  color: #04496b;
-  padding: 2%;
-  text-decoration: none;
+	visibility: visible;
+	background: transparent;
+	color: #04496b;
+	padding: 2%;
+	text-decoration: none;
 }
 
 section a:visited {
-  visibility: visible;
-  background: transparent;
-  color: #04496b;
-  padding: 2%;
+	visibility: visible;
+	background: transparent;
+	color: #04496b;
+	padding: 2%;
 }
 
 section img {
-  width: 4em;
-  height: 4em;
-  background: transparent;
-  transform: none;
-  box-shadow: none;
+	width: 4em;
+	height: 4em;
+	background: transparent;
+	transform: none;
+	box-shadow: none;
 }
 
 section div {
-  position: relative;
-  bottom: 100%;
-  left: 0;
-  right: 0;
-  background-image: inherit;
-  overflow: hidden;
-  max-width: 100%;
-  height: 0;
-  transition: .5s ease;
-  border-radius: 15%;
+	position: relative;
+	bottom: 100%;
+	left: 0;
+	right: 0;
+	background-image: inherit;
+	overflow: hidden;
+	max-width: 100%;
+	height: 0;
+	transition: .5s ease;
+	border-radius: 15%;
 }
 
 footer {
-  padding-top: 3%;
-  text-align: center;
-  color: black;
+	padding-top: 3%;
+	text-align: center;
+	color: black;
+}
+
+.medUser.hover {
+	position: fixed;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 2;
+	cursor: pointer;
+}
+
+.medUser.hover .medUserInfo {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	height: 50px;
+	font-size: 50px;
+	color: white;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 }
