--- a/src/main/resources/static/css/patient-main-style.css
+++ b/src/main/resources/static/css/patient-main-style.css
@@ -155,11 +155,62 @@ footer {
 
 .medUser.hover .medUserInfo {
 	position: absolute;
+	overflow: visible;
 	top: 50%;
 	left: 50%;
 	height: 50px;
 	font-size: 50px;
-	color: white;
+	color: blue;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+.nonMedUser.hover {
+	position: fixed;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 2;
+	cursor: pointer;
+}
+
+.nonMedUser.hover .nonMedUserInfo {
+	position: absolute;
+	overflow: visible;
+	top: 50%;
+	left: 50%;
+	height: 50px;
+	font-size: 50px;
+	color: blue;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+}
+.userInfo.hover {
+	position: fixed;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 2;
+	cursor: pointer;
+}
+
+.userInfo.hover .userInfo {
+	position: absolute;
+	overflow: visible;
+	top: 50%;
+	left: 50%;
+	height: 50px;
+	font-size: 50px;
+	color: blue;
 	transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 }
