--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -4,6 +4,7 @@
 <head>
   <title>Peace Of Mind</title>
   <link href="/css/non-med-styles.css" rel="stylesheet">
+  <link href="/css/status-history.css" rel="stylesheet">
 </head>
 
 <body class="container">
@@ -38,10 +39,17 @@
     </section>
 
 
+		<input class="id" type="hidden" name="id" th:value="${patient.id}">
     <section class="patientStatus" th:if="${status.id}">
-      <h3>Current Patient Status</h3>
-			<img th:src="@{'images/' + ${status.status.getImageFile()}}">
-			<p>Entered at [[${status.printDateTime()}]]</p>
+      <div class="statusChange">
+				<h3>Current Patient Status</h3>
+				<img th:src="@{'images/' + ${status.status.getImageFile()}}">
+				<p>Entered at [[${status.printDateTime()}]]</p>
+				<p>Would you like to view the status history?</p>
+			</div>
+			<button class="show-one" type="submit" value="submit">Show One</button>
+			<button class="show-three" type="submit" value="submit">View Status History</button>
+			<button class="show-all" type="submit" value="submit">Show All</button>
     </section>
 
     <section class="medication-info">
@@ -89,9 +97,12 @@
     </div>
   </div>
 </div>
+
   <footer>
     <span>&copy; Peace of Mind WCCI Final project</span>
   </footer>
+
+  <script src="./js/show-statuses.js"></script>
 </body>
 
 </html>
