--- a/src/main/resources/templates/nonMedicalUser-Home.html
+++ b/src/main/resources/templates/nonMedicalUser-Home.html
@@ -42,7 +42,7 @@
 				<p>Entered at [[${status.printDateTime()}]]</p>
 				<p>Would you like to view the status history?</p>
 			</div>
-			<button class="show-one" type="submit" value="submit">Show Less</button>
+			<button class="show-one" type="submit" value="submit">Show One</button>
 			<button class="show-three" type="submit" value="submit">View Status History</button>
 			<button class="show-all" type="submit" value="submit">Show All</button>
 		</section>
@@ -74,7 +74,7 @@
 		<small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</small>
 	</footer>
 	
-	<script src="./js/showing-one-status.js"></script>
+	<script src="./js/show-statuses.js"></script>
 </body>
 
 </html>
