add js to prevent patient from resubmitting med taken (hide button)

--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -13,6 +13,7 @@
         ).then(
           (text) => {
             evt.target.parentElement.insertAdjacentHTML(`beforebegin`, text);
+            evt.target.parentElement.style.display = "none";
           }
         ).catch(
           (error) => console.log(`asyncAddReview fetch attempt to ${sPayload}: error.getMessage()`)
