initial creation of java enum - mostly incorporated - need to correct js

--- a/src/main/resources/templates/add-medication.html
+++ b/src/main/resources/templates/add-medication.html
@@ -40,8 +40,13 @@
 
         <div class="text">
             <div class="administration">
-                <label for="administration">Administration</label>
-                <input class="textbox" type="text" id="administration" name="administration">
+                <p>Method Of Administration</p>
+                <label for="oral">Oral</label>
+                <input class="administration" type="radio" id="oral" name="administration" value="oral" checked>
+                <label for="inhaler">Inhaler</label>
+                <input class="administration" type="radio" id="inhaler" name="administration" value="inhaler">
+                <label for="injection">Injection</label>
+                <input class="administration" type="radio" id="injection" name="administration" value="injection">
             </div>
         </div>
 
