--- a/src/main/resources/templates/med-tracker-history-med.html
+++ b/src/main/resources/templates/med-tracker-history-med.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Peace Of Mind</title>
 	<link href="/css/non-med-styles.css" rel="stylesheet">
+	<link href="/css/grid-medHistory.css" rel="stylesheet">
 </head>
 
 <body class="container">
@@ -26,12 +27,14 @@
 			<p>This Year</p>
 
 			<div th:each="medTracker : ${medicationTrackers}">
-				<p th:text=${medTracker.date}></p>
-				<p th:text=${medTracker.medication.genericName}></p>
-				<p>[[${medTracker.dosesMissed}]] doses missed</p>
+				<div class="grid-container">
+					<p class="item-1" th:text=${medTracker.date}></p>
+					<p class="item-2" th:text=${medTracker.medication.genericName}></p>
+					<p class="item-3" th:classappend="(${medTracker.dosesMissed} > 0) ? noncompliant : '' ">[[${medTracker.dosesMissed}]] doses missed</p>
+				</div>
 			</div>
 		</section>
-
+		
 	</div>
 
 	<footer>
