--- a/src/main/resources/templates/patient-diary.html
+++ b/src/main/resources/templates/patient-diary.html
@@ -17,6 +17,20 @@
   <header>
     <h2>My Diary</h2>
   </header>
+<div class="container">
+
+  <form method="POST">
+    <div>
+      <label>What's on your mind?:</label>
+      <input type="text" name="entryText" />
+    </div>
+    <div>
+      <input type="hidden" th:value="${patient.id}" name="patientId"/>
+    </div>
+    <div>
+      <button th:formaction="@{add-diaryEntry}">add Entry</button> </div>
+  </form>
+
   <div class="past-entries" th:if="${diarys}">
 
     <div class="past-entries" th:each="diary : ${diarys}">
@@ -28,6 +42,7 @@
 
   </div>
 
+</div>
   <footer>
     <small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final project</small>
   </footer>
