--- a/src/main/resources/static/css/status-history.css
+++ b/src/main/resources/static/css/status-history.css
@@ -5,3 +5,35 @@
 .show-all {
     display: none;
 }
+
+button {
+    background: transparent;
+    height: 2em;
+    border: none;
+    background-image: linear-gradient(#0f87c3, #068bcd 0%, #49b9f2 100%);
+    font-size: medium;
+    border-radius: 10px;
+    padding: 1.5%;
+    outline: transparent;
+    text-align: center;
+    line-height: 0;
+    font-weight: bold;
+    margin: .5em .2em;
+}
+  
+button:hover {
+    transform: scale(1.02);
+    box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
+}
+
+.display-status {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.status {
+    padding: 5px;
+}
+.history-question {
+    margin-top: .5em;
+}
