--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -45,7 +45,7 @@
 				<h3>Current Patient Status</h3>
 				<img th:src="@{'images/' + ${status.status.getImageFile()}}">
 				<p>Entered at [[${status.printDateTime()}]]</p>
-				<p>Would you like to view the status history?</p>
+				<p class="history-question">Would you like to view the status history?</p>
 			</div>
 			<button class="show-one" type="submit" value="submit">Show One</button>
 			<button class="show-three" type="submit" value="submit">View Status History</button>
