--- a/src/main/resources/templates/partials/statusChange-all.html
+++ b/src/main/resources/templates/partials/statusChange-all.html
@@ -1,6 +1,8 @@
 <h3>All Status History</h3>
-<div class="status" th:each="status: ${patientStatuses}">
-    <img th:if="${status.status}" th:src="@{'images/' + ${status.status.getImageFile()}}">
-    <p>Entered at [[${status.printDateTime()}]]</p>
+<div class="display-status">
+    <div class="status" th:each="status: ${patientStatuses}">
+        <img th:if="${status.status}" th:src="@{'images/' + ${status.status.getImageFile()}}">
+        <p>Entered at [[${status.printDateTime()}]]</p>
+    </div>
 </div>
-<p>Would you like to see less?</p>
+<p class="history-question">Would you like to see less?</p>
