--- a/src/main/resources/templates/partials/statusChange-three.html
+++ b/src/main/resources/templates/partials/statusChange-three.html
@@ -1,8 +1,9 @@
 <h3>Short Status History</h3>
-<div class="status" th:each="status: ${patientStatuses}">
-    <img th:if="${status.status}" th:src="@{'images/' + ${status.status.getImageFile()}}">
-    <p>Entered at [[${status.printDateTime()}]]</p>
+<div class="display-status">
+    <div class="status" th:each="status: ${patientStatuses}">
+        <img th:if="${status.status}" th:src="@{'images/' + ${status.status.getImageFile()}}">
+        <p>Entered at [[${status.printDateTime()}]]</p>
+    </div>
 </div>
-<p>Would you like to see the history?</p>
-    
+<p class="history-question">Would you like to see the history?</p>
     
