--- a/src/main/resources/templates/my-medications.html
+++ b/src/main/resources/templates/my-medications.html
@@ -4,35 +4,6 @@
 <head>
   <title>Patient-Medications</title>
   <link href="/css/medications-style.css" rel="stylesheet">
-  <script type="text/javascript">
-    function asyncAddMedicationLog(evt){
-        // /show-patients/{patientId}/patient-medication-log-update"
-        let sPayload = "http://localhost:8080/show-patients/" + [[${patient.getId()}]] + "/patient-medication-log-update?medicationId=" + evt.target.getAttribute('data-medicationId');
-        fetch(sPayload).then(
-          (response) => response.text()
-        ).then(
-          (text) => {
-            evt.target.parentElement.insertAdjacentHTML(`beforebegin`, text);
-            evt.target.parentElement.style.display = "none";
-          }
-        ).catch(
-          (error) => console.log(`asyncAddReview fetch attempt to ${sPayload}: error.getMessage()`)
-        );
-    }
-    document.addEventListener("readystatechange", (evt) => {
-        if(evt.target.readyState==="complete"){
-          const oButtonCollection = document.querySelectorAll('.log-medication button');
-          for(let i in oButtonCollection){
-            //if(i==0 || i==1){ console.log(`In readyState event. The i of oButtonCollection is: ${typeof i} and oBUttonCollection has own property: ${oButtonCollection.hasOwnProperty(i)}`);}
-            if(oButtonCollection.hasOwnProperty(i)){
-              console.log(`In readyState event, in loop, in conditional`);
-              oButtonCollection[i].addEventListener("click", asyncAddMedicationLog);
-            }
-          }
-        }
-      }
-    );
-    </script>
 </head>
 
 <body class="container">
@@ -58,7 +29,8 @@
         </div>
       </section>
       <div class="log-medication">
-            <button th:attr="data-medicationId=${medication.getId()}">Dose Taken</button>
+            <button>Dose Taken</button>
+
       </div>
     </div>
 
