--- a/src/main/resources/templates/patient-home.html
+++ b/src/main/resources/templates/patient-home.html
@@ -52,6 +52,7 @@
 			</div>
 		</section>
 
+
 		<section class="nonMedUser" th:if="${patient.nonMedicalUser}">
 			<img class="nonMedIcon" src="images/Caregiver.png" alt="caregiver-icon">
 			<h2>Your Caregiver</h2>
@@ -110,6 +111,8 @@
 		<small>&copy; 2018 Peace Of Mind WCCI Flex Fall Columbus Final
 			project</small>
 	</footer>
+
+  <script src="./js/add-status.js"></script>
 
 </body>
 
