Updates to Adherence Page - th:if & th:unless to change missed doses vs compliance

--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -35,7 +35,7 @@
             <h4><p id="medName" th:text=${medication.genericName}></p></h4>
         </div>
       </section>
-              <a th:href="@{/med-tracker-history-med(id=${patient.id})}">Full Adherence History</a>
+              <a th:href="@{/med-tracker-history-med(id=${patient.id})}"><button>Full Adherence History</button></a>
     </section>
 
 
