--- a/src/main/resources/static/css/grid-medHistory.css
+++ b/src/main/resources/static/css/grid-medHistory.css
@@ -2,9 +2,14 @@
     display: inline-grid;
     grid-template-columns: 1fr 1.5fr 1.5fr;
     grid-column-gap: 5px;
+    padding-bottom: 5px;
 }
 
 .noncompliant {
     color: rgb(180, 6, 0);
     font-weight: bold;
+}
+
+h3, h4 {
+    margin: .3em auto;
 }
