Two changes... ha ha ha

--- a/src/main/resources/templates/med-tracker-history-med.html
+++ b/src/main/resources/templates/med-tracker-history-med.html
@@ -38,6 +38,8 @@
 			</div>
 		</section>
 		
+		<a th:href="@{/medical-user-home(id=${medicalUser.id})}"><button>Return To Main Page</button></a>
+
 	</div>
 
 	<footer>
