--- a/src/main/resources/static/css/grid-medHistory.css
+++ b/src/main/resources/static/css/grid-medHistory.css
@@ -13,3 +13,23 @@
 h3, h4 {
     margin: .3em auto;
 }
+
+button {
+    background: transparent;
+    height: 2em;
+    border: none;
+    background-image: linear-gradient(#0f87c3, #068bcd 0%, #49b9f2 100%);
+    font-size: medium;
+    border-radius: 10px;
+    padding: 1.5%;
+    outline: transparent;
+    text-align: center;
+    line-height: 0;
+    font-weight: bold;
+    margin-bottom: .5em;
+}
+  
+button:hover {
+    transform: scale(1.02);
+    box-shadow: 0 15px 20px rgba(169, 201, 255, .6);
+}
