--- a/src/main/resources/templates/medicalUser-Home.html
+++ b/src/main/resources/templates/medicalUser-Home.html
@@ -19,13 +19,12 @@
     </header>
 
     <div class="dashboard">
-    <h3>Your Dashboard</h3>
+    <h2>Your Dashboard</h2>
 
-  <h4>Your Patient:</h4>
-  <div th:if="${medicalUser.patient}">
-    <p> [[${patient.firstName}]] [[${patient.lastName}]] </p>
-    <p>Diagnosis: <span th:text="${patient.diagnosis}"></span></p>
-
+    <div th:if="${medicalUser.patient}">
+      <h3>Your Patient: [[${patient.firstName}]] [[${patient.lastName}]]</h3>
+      <p>Diagnosis: <span th:text="${patient.diagnosis}"></span></p>
+    
     <section class="medLog">
       <h3>Medication Adherence</h3>
       <p>This Month</p>
